--- a/MVCDay1/Views/Test/MyView.cshtml
+++ b/MVCDay1/Views/Test/MyView.cshtml
@@ -11,8 +11,14 @@
     <title>MyView</title>
 </head>
 <body>
-    <div> 
-        Welcome to MVC 5 step by step learning
+    <div>
+        @{
+            MVCDay1.Models.Employee emp = (MVCDay1.Models.Employee)ViewData["Employee"];
+        }
+
+        <b>Employee Details </b><br />
+        Employee Name : @emp.FirstName @emp.LastName <br />
+        Employee Salary: @emp.Salary.ToString("C")
     </div>
 </body>
 </html>
