--- a/MVCDay1/Views/Test/MyView.cshtml
+++ b/MVCDay1/Views/Test/MyView.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using MVCDay1.Models
+@model Employee
 @{
     Layout = null;
 }
@@ -12,14 +13,22 @@
 </head>
 <body>
     <div>
-        @{
-            MVCDay1.Models.Employee emp = (MVCDay1.Models.Employee)ViewBag.Employee;
+        <b>Employee Details</b><br />
+
+        Employee Name : @Model.FirstName @Model.LastName
+        <br />
+        @if (Model.Salary > 15000)
+        {
+            <span style="background-color:yellow">
+                Employee Salary: @Model.Salary.ToString("C")
+            </span>
         }
-        Employee Details
-        <br />
-        Employee Name: @emp.FirstName @emp.LastName
-        <br />
-        Employee Salary: @emp.Salary.ToString("C")
+        else
+        {
+            <span style="background-color:green">
+                Employee Salary: @Model.Salary.ToString("C")
+            </span>
+        }
     </div>
 </body>
 </html>
