--- a/MVCDay1/Views/Test/MyView.cshtml
+++ b/MVCDay1/Views/Test/MyView.cshtml
@@ -1,5 +1,5 @@
-﻿@using MVCDay1.Models
-@model Employee
+﻿@using MVCDay1.ViewModels
+@model EmployeeViewModel
 @{
     Layout = null;
 }
@@ -12,23 +12,14 @@
     <title>MyView</title>
 </head>
 <body>
+    Hello @Model.UserName
+    <hr />
     <div>
         <b>Employee Details</b><br />
-
-        Employee Name : @Model.FirstName @Model.LastName
-        <br />
-        @if (Model.Salary > 15000)
-        {
-            <span style="background-color:yellow">
-                Employee Salary: @Model.Salary.ToString("C")
-            </span>
-        }
-        else
-        {
-            <span style="background-color:green">
-                Employee Salary: @Model.Salary.ToString("C")
-            </span>
-        }
+        Employee Name : @Model.EmployeeName <br />
+        <span style="background-color:@Model.SalaryColor">
+            Employee Salary: @Model.Salary
+        </span>
     </div>
 </body>
 </html>
