--- a/MVCDay1/Views/Test/MyView.cshtml
+++ b/MVCDay1/Views/Test/MyView.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MVCDay1.ViewModels
-@model EmployeeViewModel
+@model EmployeeListViewModel
 @{
     Layout = null;
 }
@@ -15,11 +15,19 @@
     Hello @Model.UserName
     <hr />
     <div>
-        <b>Employee Details</b><br />
-        Employee Name : @Model.EmployeeName <br />
-        <span style="background-color:@Model.SalaryColor">
-            Employee Salary: @Model.Salary
-        </span>
+        <table>
+            <tr>
+                <th>Employee Name</th>
+                <th>Salary</th>
+            </tr>
+            @foreach (EmployeeViewModel item in Model.Employees)
+            {
+                <tr>
+                    <td>@item.EmployeeName</td>
+                    <td style="background-color:@item.SalaryColor">@item.Salary</td>
+                </tr>
+            }
+        </table>
     </div>
 </body>
 </html>
